# chained-regressor-nn

./: .coverage  LICENSE  MANIFEST.in  README.md  meta.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  validate_toml.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
chained_regressor_nn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chainedregressornn/: __init__.py  core.py  neural.py  utils.py
tests/: __init__.py  conftest.py  test_core.py  test_coverage_extra.py  test_neural.py  test_pipeline.py  test_utils.py
