[metadata]
name = chained-regressor-nn
version = 0.1.1
author = Guy Kaptue
author_email = guykaptue24@gmail.com
description = A modular regression pipeline combining traditional ML models with neural networks for tabular prediction tasks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GuyKaptue/chained-regressor-nn
project_urls =
    Bug Tracker = https://github.com/GuyKaptue/chained-regressor-nn/issues
    Documentation = https://github.com/GuyKaptue/chained-regressor-nn#readme
    Source = https://github.com/GuyKaptue/chained-regressor-nn
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8, <4.0
install_requires =
    numpy>=1.26.0
    pandas>=2.2.0
    torch>=2.4.0
    scikit-learn>=1.4.0
    scipy>=1.11.0
include_package_data = True
zip_safe = False

[options.extras_require]
ml =
    xgboost>=2.0.0
    lightgbm>=4.0.0
    catboost>=1.2.0
dev =
    pytest>=6.0
    pytest-cov>=2.0
    black>=21.0
    flake8>=3.8
    mypy>=0.800
full =
    xgboost>=2.0.0
    lightgbm>=4.0.0
    catboost>=1.2.0
    pytest>=6.0
    pytest-cov>=2.0
    black>=21.0
    flake8>=3.8
    mypy>=0.800

[options.packages.find]
exclude =
    tests*
    docs*

[bdist_wheel]
universal = 0

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --verbose
    --cov=chainedregressornn
    --cov-report=term-missing
    --cov-report=html
filterwarnings =
    ignore::UserWarning
    ignore::DeprecationWarning
    ignore::sklearn.exceptions.ConvergenceWarning
[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    .venv,
    build,
    dist,
    *.egg-info

[mypy]
python_version = 3.13
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True

[coverage:run]
source = chainedregressornn
omit = 
    */tests/*
    */test_*.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
